<resources>
    //login page
    <string name="app_name">DogLife</string>
    <string name="login_user_name_hint">Phone number, email address or username</string>
    <string name="login_user_password_hint">Password</string>
    <string name="log_in">Log in</string>
    <string name="login_register">CREATE NEW ACCOUNT</string>
    <string name="adopt_dog_for_adoption_title">Dogs Available for Adoption</string>
    <string name="adopt_recently_view_animal">Recently Viewed Pets</string>
    <string name="register_add_image">Add image</string>
    <string name="register_title_name">Animal name</string>
    <string name="register_title_type">Animal type</string>
    <string name="register_title_address">Address</string>
    <string name="register_title_image">Add image</string>
    <string name="common_dog">Dog</string>
    <string name="common_cat">Cat</string>
    <string name="common_submit">Submit</string>

    //bottom navigation
    <string name="done">Done</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_pet">Pet</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_search">Search</string>
    <string name="title_registered">Registered</string>
    <string name="title_detail">Profile</string>
    <string name="cd_home">Overview</string>
    <string name="cd_register">Register</string>
    <string name="cd_login">Login</string>
    <string name="cd_form">Form</string>
</resources>